# src/main/resources/openApi_telegramBotApi.yaml
@@ -121,6 +121,107 @@ paths:
 
       deprecated: false
 
+  /v1/ads/{adId}:
+
+    get:
+      security:
+        - Authorization:
+            - read_info
+            - write_info
+      tags:
+        - Ads
+      operationId: ad_get_by_id
+      summary: Get ad by ID
+      parameters:
+
+        - in: path
+          name: adId
+          description: Ad ID
+          required: true
+          schema:
+            type: integer
+            format: int64
+
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/AdApiObject.yaml'
+          headers: { }
+
+        '400':
+          description: The request cannot be processed due to the format or request data value
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/GeneralErrorResultApiResponse.yaml'
+
+        '401':
+          description: Unauthorized. The request cannot be processed due to the issue with provided authentication information
+          headers: { }
+
+        '403':
+          description: Forbidden. Access to the requested resource is forbidden due to the caller's access permissions
+          headers: { }
+
+        '500':
+          description: Unexpected processing error. The request can be re-submitted to the processing
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/GeneralErrorResultApiResponse.yaml'
+
+      deprecated: false
+
+    delete:
+      security:
+        - Authorization:
+            - read_info
+            - write_info
+      tags:
+        - Ads
+      operationId: ad_delete
+      summary: Delete ad
+      parameters:
+
+        - in: path
+          name: adId
+          description: Ad ID
+          required: true
+          schema:
+            type: integer
+            format: int64
+
+      responses:
+        '204':
+          description: Ad has been deleted
+          headers: { }
+
+        '400':
+          description: The request cannot be processed due to the format or request data value
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/GeneralErrorResultApiResponse.yaml'
+
+        '401':
+          description: Unauthorized. The request cannot be processed due to the issue with provided authentication information
+          headers: { }
+
+        '403':
+          description: Forbidden. Access to the requested resource is forbidden due to the caller's access permissions
+          headers: { }
+
+        '500':
+          description: Unexpected processing error. The request can be re-submitted to the processing
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/GeneralErrorResultApiResponse.yaml'
+
+      deprecated: false
 
 tags:
   - name: Ads
